Avoid overflow

--- a/_includes/amigavision.css
+++ b/_includes/amigavision.css
@@ -95,8 +95,7 @@ pre {
   color: #666;
   background-color: rgb(239, 241, 242);  
   padding: 16px;
-  margin-left: -16px;
-  padding-right: 32px;
+  margin: 0 -16px;
 }
 
 code {
